
class Square(object):

    def __init__(self, pos_x, pos_y):
        self.pos_x = pos_x
        self.pos_y = pos_y
        self.symbol = "___"
        self.trash = None




